--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
